[project]
name = "hanzo-tools-paas"
version = "0.1.0"
description = "Hanzo PaaS MCP tool — deployments, environments, logs, IAM, and cloud services"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Hanzo AI", email = "dev@hanzo.ai" }]
keywords = ["hanzo", "mcp", "paas", "iam", "deploy", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "hanzo-tools-core>=0.1.0",
    "hanzo-tools-auth>=0.1.0",
    "hanzo-iam>=0.1.0",
    "httpx>=0.27.0",
]

[project.entry-points."hanzo.tools"]
paas = "hanzo_tools.paas:TOOLS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hanzo_tools"]
