[project]
name = "hanzo-tools-platform"
version = "0.1.0"
description = "Hanzo platform MCP tool — PaaS deployments, IAM users/orgs, and cloud services"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hanzo AI", email = "dev@hanzo.ai" }]
keywords = ["hanzo", "mcp", "paas", "iam", "platform", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "hanzo-tools-core>=0.1.0",
    "hanzo-tools-auth>=0.1.0",
    "hanzo-iam>=0.1.0",
    "httpx>=0.27.0",
]

[project.entry-points."hanzo.tools"]
platform = "hanzo_tools.platform:TOOLS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hanzo_tools"]
